# dotfiles

./: .bashrc  bashrc  dircolors  gitconfig  install.sh
mc/: ini
skeleton/: .clang-format  CMakeLists.txt
skeleton/tests/: CMakeLists.txt
terminator/: config
vscode/: settings.json
